--- a/src/app/globals.css
+++ b/src/app/globals.css
@@ -132,13 +132,12 @@
 }
 
 @layer highlight {
-  pre code.hljs {
-    display: block;
+  pre {
     overflow-x: auto;
   }
 
   code.hljs {
-    padding: 3px 5px;
+    padding: 0;
   }
 
   .hljs-doctag,
